# BU-Agent-Extension

./: .gitignore  AGENTS.md  README.md  package-lock.json
agent-core/: .env.example  config.yaml  config_loader.py  logger.py  pyproject.toml  server.py
agent-core/agent/: __init__.py  agent.py  model.py  prompts.py  tools.py
agent-core/browser/: connection.py  protocol.py  tools.py
agent-core/docs/plans/: 2026-06-12-event-stream-display.md
agent-core/recorder/: __init__.py  atomizer.py  distiller.py  event_utils.py  installer.py  pipeline.py  types.py
agent-core/skills/example/: SKILL.md
agent-core/tests/: conftest.py  test_agent.py  test_atomizer.py  test_config_loader.py  test_connection.py  test_distiller.py  test_event_utils.py  test_installer.py  test_model.py  test_pipeline.py  test_protocol.py  test_recorder_types.py  test_server.py  test_server_record.py  test_tools.py
chrome-extension/: background.js  manifest.json  package-lock.json  package.json  tsconfig.json  wxt.config.ts
chrome-extension/content/: content.js
chrome-extension/libs/: ws-client.js
chrome-extension/public/content/: ax-helpers.js  content.js  (+2 more)
chrome-extension/sidepanel/: sidepanel.html  sidepanel.js
chrome-extension/test/: content.test.js  setup.js  ws-client.test.js
docs/plans/: 2026-06-14-parse-page-ax-tree-design.md  2026-06-14-parse-page-ax-tree.md  2026-06-14-skill-feature-design.md  2026-06-14-skill-feature-implementation.md  2026-06-14-token-usage-display-design.md  2026-06-14-token-usage-display.md
dom-tree-migration/: DOM-TREE-EXTRACTION.md
ui参考/: README.md
(+36 files in other folders)
