[project]
name = "bu-agent-core"
version = "0.1.0"
description = "Browser Use Agent Core - agentscope v2 后端"
requires-python = ">=3.11"
dependencies = [
    "agentscope>=2.0.0",
    "websockets>=13.0",
    "pyyaml>=6.0",
    "socksio>=1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "browser", "config_loader.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
